apps/media/soularr/soularr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soularr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soularr
  template:
    metadata:
      labels:
        app: soularr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: soularr
          image: mrusse08/soularr:latest
          ports:
            - containerPort: 8265
              name: web
          volumeMounts:
            - name: config
              mountPath: /config/config.ini
              subPath: config.ini
            - name: data
              mountPath: /data
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          configMap:
            name: soularr-configmap-config
        - name: data
          persistentVolumeClaim:
            claimName: soularr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: media-downloads
